[package]
name = "movie-site-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["default"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
